--- a/home.css
+++ b/home.css
@@ -13,13 +13,13 @@
 .home-header {
   top: 0px;
   left: 0px;
-  width: 1538px;
+  width: 100%;
   height: 61px;
   display: flex;
   z-index: 1;
   position: fixed;
-  max-width: 101%;
-  min-width: 101%;
+  max-width: 100%;
+  min-width: 100%;
   align-self: flex-end;
   align-items: center;
   padding-top: var(--dl-space-space-twounits);
@@ -585,12 +585,12 @@
 }
 .home-footer {
   top: 3036px;
-  width: 1536px;
+  width: 100%;
   display: flex;
   z-index: 1;
   position: absolute;
-  max-width: 1536px;
-  min-width: 1536px;
+  max-width: 100%;
+  min-width: 100%;
   align-items: center;
   padding-top: var(--dl-space-space-twounits);
   padding-left: var(--dl-space-space-threeunits);
