--- a/home.css
+++ b/home.css
@@ -308,10 +308,13 @@
 }
 .home-text21 {
   font-size: 20px;
+  font-family: Poppins;
 }
 .home-text22 {
   font-size: 20px;
+  font-style: normal;
   font-family: Poppins;
+  font-weight: 700;
 }
 .home-text23 {
   font-size: 20px;
@@ -319,9 +322,6 @@
 }
 .home-text24 {
   font-size: 20px;
-  font-style: normal;
-  font-family: Poppins;
-  font-weight: 700;
 }
 .home-text25 {
   font-size: 20px;
@@ -329,19 +329,33 @@
 }
 .home-text26 {
   font-size: 20px;
+  font-family: Poppins;
+}
+.home-text27 {
+  font-size: 20px;
   font-style: normal;
   font-family: Poppins;
   font-weight: 700;
 }
-.home-text27 {
+.home-text28 {
   font-size: 20px;
   font-family: Poppins;
 }
 .home-text29 {
   font-size: 20px;
+  font-style: normal;
   font-family: Poppins;
+  font-weight: 700;
 }
 .home-text30 {
+  font-size: 20px;
+  font-family: Poppins;
+}
+.home-text31 {
+  font-size: 20px;
+  font-family: Poppins;
+}
+.home-text32 {
   font-size: 20px;
   font-family: Poppins;
 }
